# stock-watchlist-cli

./: .env.example  .gitignore  .gitmodules  AGENTS.md  README.md  integration_test_output.csv  pyproject.toml
config/: config.yaml
docs/: DEV_LOG.md  PLAN.md  spec.md
sample/: US_STOCK_012ed.txt  UsStock 2025-07-30.xlsx
src/: main.py
src/config/: settings.py
src/converters/: __init__.py  format_converter.py
src/google_sheets/: auth.py  client.py
src/models/: stock.py
src/parsers/: __init__.py  base_parser.py  seekingalpha.py  tradingview.py
src/utils/: file_io.py  logging_config.py  param_utils.py
tests/unit/: test_auth.py  test_file_io.py  test_format_converter.py  test_main.py  test_seekingalpha_parser.py  test_sheets_client.py  test_sheets_commands.py  test_stock_model.py  test_tradingview_parser.py
