[project]
name = "stock-watchlist-cli"
version = "0.1.3"
description = "株式ウォッチリスト管理CLI - TradingView、Seeking Alpha、Google Sheets間のデータ変換ツール"
authors = [{name = "Developer", email = "dev@example.com"}]
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    # CLI・設定管理
    "click>=8.0.0",
    "pydantic>=1.10.0",
    "PyYAML>=6.0",
    # データ処理
    "pandas>=1.5.0",
    "openpyxl>=3.0.0",
    "chardet>=5.0.0",
    "python-calamine",
    # Google Sheets連携
    "gspread>=5.7.0",
    "google-auth>=2.15.0",
    "google-auth-oauthlib>=0.8.0",
    "google-auth-httplib2>=0.1.0",
    # 環境変数管理
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    # テスト
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "pytest-mock>=3.10.0",
    # コード品質
    "black>=22.0.0",
    "flake8>=5.0.0",
    "mypy>=1.0.0",
    # 型スタブ
    "types-PyYAML",
    "pandas-stubs",
]

[project.scripts]
stock-cli = "src.main:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.black]
line-length = 88
target-version = ['py38']

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --cov=src --cov-report=html --cov-report=term-missing"